# network

./: Cargo.toml  PLAN.md  README.md
crates/sp-blockchain/: Cargo.toml
crates/sp-blockchain/src/: block.rs  blockchain.rs  error.rs  lib.rs
crates/sp-merkle/: Cargo.toml
crates/sp-merkle/src/: error.rs  lib.rs  proof.rs  tree.rs
crates/sp-node/: Cargo.toml
crates/sp-node/src/: behaviour.rs  config.rs  error.rs  event.rs  lib.rs  main.rs  mode.rs  node.rs  protocol.rs
crates/sp-node/tests/: integration.rs
crates/sp-sync/: Cargo.toml
crates/sp-sync/src/: error.rs  lib.rs  manager.rs  strategy.rs
crates/sp-transaction/: Cargo.toml
crates/sp-transaction/src/: error.rs  lib.rs  transaction.rs  transaction_type.rs
crates/sp-tui/: Cargo.toml
crates/sp-tui/src/: app.rs  controller.rs  events.rs  main.rs  peers_store.rs  ui.rs
scripts/: com.socialproduction.spnode.plist  install.ps1  install.sh  sp-node.service  uninstall.ps1  uninstall.sh
