[package]
name = "sp-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for the Social Production P2P node"

[[bin]]
name = "spn"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
anyhow = "1"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
sp-node = { workspace = true }
sp-sync = { workspace = true }
sp-transaction = { workspace = true }
sp-blockchain = { workspace = true }
libp2p = { workspace = true }
serde_json = { workspace = true }
